--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link rel="apple-touch-icon" href="./assets/profile_img.png" />
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
-    <!-- JS -->
-    <script src="main.js" defer></script>
+    
   </head>
   <body>
     <!-- particles.js container -->
@@ -63,5 +62,7 @@
 
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <!-- JS -->
+    <script src="main.js" ></script>
   </body>
 </html>
