--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <!-- JS -->
     <script src="main.js" ></script>
   </body>
