--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
                   src="https://raw.githubusercontent.com/devicons/devicon/master/icons/github/github-original.svg"
                   alt="GitHub Logo"
                 />
-                <a href="https://github.com/matheus-gs" target="_blank"> Matheus-gs </a>
+                <a href="https://github.com/matheus-gs" target="_blank"> GitHub </a>
               </div>
               <div class="linkedin">
                 <img
                   src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linkedin/linkedin-original.svg"
                   alt="linkedin Logo"
                 />
-                <a href="https://linkedin.com/in/matheusgss" target="_blank"> Matheusgss </a>
+                <a href="https://linkedin.com/in/matheusgss" target="_blank"> LinkedIn </a>
               </div>
               <div class="codepen">
                 <img
                   src="https://raw.githubusercontent.com/devicons/devicon/master/icons/codepen/codepen-plain.svg"
                   alt="codepen Logo"
                 />
-                <a href="https://codepen.io/Matheus-gs" target="_blank"> Matheus-gs </a>
+                <a href="https://codepen.io/Matheus-gs" target="_blank"> CodePen </a>
               </div>
              </div>
             </div>
