--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
              </div>
              <div class="social">
               <div class="github">
-                <img
-                  src="https://raw.githubusercontent.com/devicons/devicon/master/icons/github/github-original.svg"
-                  alt="GitHub Logo"
-                />
-                <a href="https://github.com/matheus-gs" target="_blank"> Matheus-gs </a>
+
+                <a href="https://github.com/matheus-gs" target="_blank">     
+                  <img src="https://img.shields.io/badge/-GitHub-1a1a1a?style=flat-square&labelColor=white&logo=github&logoColor=1a1a1a">
+                </a>
+
               </div>
               <div class="linkedin">
-                <img
-                  src="https://raw.githubusercontent.com/devicons/devicon/master/icons/linkedin/linkedin-original.svg"
-                  alt="linkedin Logo"
-                />
-                <a href="https://linkedin.com/in/matheusgss" target="_blank"> Matheusgss </a>
+
+                <a href="https://linkedin.com/in/matheusgss" target="_blank"> 
+                  <img src="https://img.shields.io/badge/-LinkedIn-1a1a1a?style=flat-square&labelColor=0c84e6&logo=linkedin&logoColor=white">
+                </a>
+
               </div>
               <div class="codepen">
-                <img
-                  src="https://raw.githubusercontent.com/devicons/devicon/master/icons/codepen/codepen-plain.svg"
-                  alt="codepen Logo"
-                />
-                <a href="https://codepen.io/Matheus-gs" target="_blank"> Matheus-gs </a>
+     
+                <a href="https://codepen.io/Matheus-gs" target="_blank">
+                  <img src="https://img.shields.io/badge/-CodePen-1a1a1a?style=flat-square&labelColor=2a2a2a&logo=codepen&logoColor=white">
+                </a>
+
               </div>
              </div>
             </div>
