--- a/index.html
+++ b/index.html
@@ -15,49 +15,66 @@
   <body>
     <!-- particles.js container -->
     <div id="particles-js">
-      <div id="app">
-   
 
+      <div id="app">
 
           <div class="card">
+
             <div class="profile_img">
+
               <img src="assets/profile_img.png" alt="" />
+
             </div>
 
             <div class="profile_info">
+
              <div class="profile_title">
+
               <h1>Matheus Gomes</h1>
+
               <h4>Computer Science Student</h4>
+
              </div>
+
              <div class="social">
+
               <div class="github">
 
                 <a href="https://github.com/matheus-gs" target="_blank">     
-                  <img src="https://img.shields.io/badge/-GitHub-1a1a1a?style=flat-square&labelColor=white&logo=github&logoColor=1a1a1a">
+                  <img src="assets/github.svg" alt="Github Logo">
+                  GitHub
                 </a>
 
               </div>
+
               <div class="linkedin">
 
                 <a href="https://linkedin.com/in/matheusgss" target="_blank"> 
-                  <img src="https://img.shields.io/badge/-LinkedIn-1a1a1a?style=flat-square&labelColor=0c84e6&logo=linkedin&logoColor=white">
+                  <img src="assets/linkedin.svg" alt="LinkedIn Logo"> 
+                  LinkedIn          
                 </a>
 
               </div>
+
               <div class="codepen">
      
                 <a href="https://codepen.io/Matheus-gs" target="_blank">
-                  <img src="https://img.shields.io/badge/-CodePen-1a1a1a?style=flat-square&labelColor=2a2a2a&logo=codepen&logoColor=white">
+                  <img src="assets/codepen.svg" alt ="Codepen Logo">
+                  CodePen
                 </a>
 
               </div>
+
              </div>
+
             </div>
+
           </div>
+
         </div>
-
-
+      
       </div>
+
     </div>
 
     <!-- particles.js lib - https://github.com/VincentGarreau/particles.js -->
