--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
               <h1>Matheus Gomes</h1>
 
-<!--               <h4>Computer Science Student</h4> -->
-              <h4>Developer</h4>
+              <h4>Computer Science Student</h4>
 
              </div>
 
